# d2

./: .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md
cmake/: ConfigureCompilerAndSystem.cmake  GoogleTest.cmake  SetIf.cmake
d2tool/: CMakeLists.txt  main.cpp
ext/dbg/: .hg_archival.txt  .hgtags  CMakeLists.txt  make.py
ext/dbg/docs/: readme.html  todo.txt
ext/dbg/examples/: CMakeLists.txt  assert.cpp  note.cpp  terminate.cpp  throw.cpp  traceback.cpp  unusual.cpp
ext/dbg/include/dbg/: throw.hpp  unusual.hpp  version.hpp
ext/dbg/include/dbg/impl/: format.hpp  raise.hpp
ext/dbg/src/: spin_mutex.hpp  unusual.cpp
ext/dbg/src/osx/: envvar.cpp  frames.cpp  throw_state.cpp  timestamp.cpp
ext/dbg/src/windows/: dbghelp.cpp  dbghelp.hpp  dll.cpp  envvar.cpp  frames.cpp  ms_symdb.cpp  throw_state.cpp  timestamp.cpp
ext/dbg/src/windows/mingw/: die_lookup.cpp  die_lookup.hpp  dwarf.cpp  dwarf.hpp  dwarf_internal.cpp  dwarf_internal.hpp  file.cpp  file.hpp  memstream.cpp  memstream.hpp  pe.cpp  pe.hpp  symbols.cpp
ext/dbg/src/windows/msvc/: symbols.cpp
ext/dbg/tests/: assert_relation_tests.cpp  assert_tests.cpp  fixtures.cpp  fixtures.hpp  frames_tests.cpp  log_tests.cpp  main.cpp  note_tests.cpp  symbols_tests.cpp  throw_tests.cpp  unusual_tests.cpp  utils.hpp
ext/fungo/: .hg_archival.txt  .hgignore  .hgtags  make.py
include/: d2.hpp
include/d2/: access.hpp  acquire_event.hpp  analysis.hpp  api.h  api.hpp  basic_lockable.hpp  build_lock_graph.hpp  build_segmentation_graph.hpp  concepts.hpp  deadlock_diagnostic.hpp  event.hpp  event_dispatcher.hpp  event_repository.hpp  event_sink.hpp  event_traits.hpp  events.hpp  filesystem_dispatcher.hpp  filesystem_loader.hpp  (+27 more)
src/: CMakeLists.txt  acquire_event.cpp  analysis.cpp  build_graphs.cpp  deadlock_diagnostic.cpp  event_sink.cpp  filesystem_dispatcher.cpp  filesystem_loader.cpp  join_event.cpp  load_events.cpp  lock_debug_info.cpp  logging.cpp  release_event.cpp  segment_hop_event.cpp  start_event.cpp  sync_skeleton.cpp  trackable_sync_object.cpp
src/api/: api.cpp
src/core/: diagnostic.cpp  lock_graph.cpp  raw_api.cpp  sync_skeleton_analysis.cpp  sync_skeleton_lock_graph.cpp  sync_skeleton_seg_graph.cpp
src/detail/: lock_debug_info.cpp
src/events/: acquire_event.cpp  join_event.cpp  release_event.cpp  segment_hop_event.cpp  start_event.cpp
src/mock/: integration_test.cpp  mutex.cpp  recursive_mutex.cpp  this_thread.cpp  thread.cpp
src/sandbox/: deadlock_diagnostic.cpp  sync_skeleton.cpp
src/v2/: uniquely_identifiable.cpp
test/: CMakeLists.txt  bounded_io_sequence.cpp  concepts.cpp  event_traits.cpp  logging.cpp  miss_unless_transitive_closure.cpp  mock.hpp  simple_ABBA.cpp  simple_ABBA_noise.cpp  simple_ABBA_redundant.cpp  simple_ABBA_redundant_diff_functions.cpp  simple_ABBA_segmented.cpp  simple_ABC.cpp  simple_ABC_segmented.cpp
test/d2mock/: CMakeLists.txt
test/d2mock/include/: d2mock.hpp
test/d2mock/include/d2mock/: integration_test.hpp  mutex.hpp  recursive_mutex.hpp  scenario.hpp  thread.hpp
test/d2mock/include/d2mock/detail/: decl.hpp
test/d2mock/src/: integration_test.cpp  mutex.cpp  recursive_mutex.cpp  scenario.cpp  thread.cpp
test/integration/: ABBA.cpp  ABBA_false_middle_gate.cpp  ABBA_noise.cpp  ABBA_recursive.cpp  ABBA_redundant.cpp  ABBA_redundant_diff_functions.cpp  ABBA_segmented.cpp  ABC.cpp  ABC_segmented.cpp  CMakeLists.txt  c_compiler.c  miss_unless_transitive_closure.cpp  mock.cpp  mock.hpp  simple_ABBA.cpp  simple_ABBA_noise.cpp  simple_ABBA_recursive.cpp  simple_ABBA_redundant.cpp  simple_ABBA_redundant_diff_functions.cpp  simple_ABBA_segmented.cpp  simple_ABC.cpp  simple_ABC_segmented.cpp
test/scenarios/: ABBA.cpp  ABBA_false_middle_gate.cpp  ABBA_gatelock.cpp  ABBA_gatelock_in_parent_thread.cpp  ABBA_gatelock_in_parent_thread_early_release.cpp  ABBA_gatelock_in_parent_thread_late_acquire.cpp  ABBA_gatelock_in_parent_thread_unlock_relock_in_between.cpp  ABBA_mirrored_in_two_threads.cpp  ABBA_noise.cpp  ABBA_one_unordered_release.cpp  ABBA_recursive.cpp  ABBA_redundant.cpp  ABBA_redundant_diff_functions.cpp  ABBA_segmented.cpp  ABBA_two_unordered_release.cpp  ABC.cpp  ABC_segmented.cpp  CMakeLists.txt  agarwal_IBM_2010_p3.cpp  held_locks_are_in_acquisition_order.cpp  join_dependent_on_lock.cpp  miss_unless_transitive_closure.cpp  reversed_happens_before.cpp  stoller_generalized_goodlock_p16.cpp  stoller_generalized_goodlock_p27.cpp  stoller_generalized_goodlock_p68.cpp
test/scenarios/d2mock/include/: d2mock.hpp
test/scenarios/d2mock/include/d2mock/: mutex.hpp  recursive_mutex.hpp  scenario.hpp  this_thread.hpp  thread.hpp
test/scenarios/d2mock/src/: scenario.cpp  this_thread.cpp  thread.cpp
test/unit/: CMakeLists.txt  acquire_event.cpp  any_event.cpp  concepts.cpp  event_dispatcher.cpp  filesystem_dispatcher.cpp  graph_cycles_test.hpp  graph_test_base.hpp  join_event.cpp  lock_debug_info.cpp  logging.cpp  mixed_events.cpp  release_event.cpp  repository.cpp  segment_hop_event.cpp  segmentation_graph.cpp  serialization_test.hpp  start_event.cpp  test_base.hpp  test_basic_lockable.cpp  test_c_api.c  test_lockable.cpp  test_standard_thread.cpp  test_thread_function.cpp  test_thread_lifetime.cpp  test_timed_lockable.cpp  test_trackable_thread.cpp  test_uniquely_identifiable.cpp
test/unit/core/: test_all_cycles.cpp  test_cyclic_permutation.cpp  test_filesystem.cpp  test_non_equivalent_cycles.cpp  test_segmentation_graph.cpp  test_synchronization_skeleton.cpp
test/unit/detail/: lock_debug_info.cpp  pair_adjacent.cpp  partition_by_index.cpp  test_cyclic_permutation.cpp  test_hawick_circuits.cpp  test_multidigraph_all_cycles.cpp  test_thread_lockable_archetypes.cpp  test_tiernan_all_cycles.cpp  test_unordered_difference.cpp  test_vertex_to_edge_path.cpp
test/unit/events/: acquire_event.cpp  join_event.cpp  recursive_acquire_event.cpp  recursive_release_event.cpp  release_event.cpp  segment_hop_event.cpp  start_event.cpp
utilities/: CMakeLists.txt  analyze.cpp  d2.cpp  graph_stats.cpp  show_graph.cpp
utility/: CMakeLists.txt  d2.cpp  main.cpp
(+126 files in other folders)
