
include_directories(../d2mock/include)

add_custom_target(integration)
function(d2_add_integration_test name)
    add_executable(test_${name} ${name}.cpp)
    target_link_libraries(test_${name} d2mock)
    add_dependencies(integration test_${name})
    add_test(NAME ${name} COMMAND test_${name})
    set_target_properties(test_${name} PROPERTIES COMPILE_FLAGS -std=c++11)
endfunction()

d2_add_integration_test(ABBA)
d2_add_integration_test(ABBA_false_middle_gate)
d2_add_integration_test(ABBA_noise)
d2_add_integration_test(ABBA_recursive)
d2_add_integration_test(ABBA_redundant)
d2_add_integration_test(ABBA_redundant_diff_functions)
d2_add_integration_test(ABBA_segmented)
d2_add_integration_test(ABC)
d2_add_integration_test(ABC_segmented)
d2_add_integration_test(miss_unless_transitive_closure)

add_executable(test_c_api test_c_api.c)
target_link_libraries(test_c_api d2mock)
add_dependencies(integration test_c_api)
add_test(NAME c_api COMMAND test_c_api)
