
include_directories(../d2mock/include)

add_custom_target(scenario)
function(add_scenario name)
    add_executable(scenario_${name} ${name}.cpp)
    target_link_libraries(scenario_${name} d2mock)
    add_dependencies(scenario scenario_${name})
    add_test(NAME ${name} COMMAND scenario_${name})
    set_target_properties(scenario_${name} PROPERTIES
                COMPILE_FLAGS -std=c++11
                COMPILE_DEFINITIONS D2MOCK_TRACKABLE_SYNC_OBJECT_ACCESS)
endfunction()

add_scenario(ABBA)
add_scenario(ABBA_false_middle_gate)
add_scenario(ABBA_gatelock)
add_scenario(ABBA_gatelock_in_parent_thread)
add_scenario(ABBA_gatelock_in_parent_thread_early_release)
add_scenario(ABBA_gatelock_in_parent_thread_late_acquire)
add_scenario(ABBA_gatelock_in_parent_thread_unlock_relock_in_between)
add_scenario(ABBA_mirrored_in_two_threads)
add_scenario(ABBA_noise)
add_scenario(ABBA_one_unordered_release)
add_scenario(ABBA_recursive)
add_scenario(ABBA_redundant)
add_scenario(ABBA_redundant_diff_functions)
add_scenario(ABBA_segmented)
add_scenario(ABBA_two_unordered_release)
add_scenario(ABC)
add_scenario(ABC_segmented)
add_scenario(agarwal_IBM_2010_p3)
add_scenario(held_locks_are_in_acquisition_order)
add_scenario(miss_unless_transitive_closure)
add_scenario(stoller_generalized_goodlock_p16)
add_scenario(stoller_generalized_goodlock_p27)
add_scenario(stoller_generalized_goodlock_p68)

add_executable(scenario_c_api test_c_api.c)
target_link_libraries(scenario_c_api d2mock)
add_dependencies(scenario scenario_c_api)
add_test(NAME c_api COMMAND scenario_c_api)
